Default to optimized launch of the JVM when using Gradle's bootRun
Closes gh-16222