@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2018 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,7 @@
 package org.springframework.boot.gradle.tasks.run;
 
 import org.gradle.api.file.SourceDirectorySet;
+import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.SourceSet;
 import org.gradle.api.tasks.SourceSetOutput;
@@ -28,6 +29,29 @@ import org.gradle.api.tasks.SourceSetOutput;
  * @since 2.0.0
  */
 public class BootRun extends JavaExec {
+
+	private boolean optimizedLaunch = true;
+
+	/**
+	 * Returns {@code true} if the JVM's launch should be optimized, otherwise
+	 * {@code false}. Defaults to {@code true}.
+	 * @return whether the JVM's launch should be optimized
+	 * @since 2.2.0
+	 */
+	@Input
+	public boolean isOptimizedLaunch() {
+		return this.optimizedLaunch;
+	}
+
+	/**
+	 * Sets whether the JVM's launch should be optimized. Defaults to {@code true}.
+	 * @param optimizedLaunch {@code true} if the JVM's launch should be optimised,
+	 * otherwise {@code false}
+	 * @since 2.2.0
+	 */
+	public void setOptimizedLaunch(boolean optimizedLaunch) {
+		this.optimizedLaunch = optimizedLaunch;
+	}
 
 	/**
 	 * Adds the {@link SourceDirectorySet#getSrcDirs() source directories} of the given
@@ -44,6 +68,10 @@ public class BootRun extends JavaExec {
 
 	@Override
 	public void exec() {
+		if (this.optimizedLaunch) {
+			setJvmArgs(getJvmArgs());
+			jvmArgs("-Xverify:none", "-XX:TieredStopAtLevel=1");
+		}
 		if (System.console() != null) {
 			// Record that the console is available here for AnsiOutput to detect later
 			this.getEnvironment().put("spring.output.ansi.console-available", true);
